--- a/Vista/Noticia.html
+++ b/Vista/Noticia.html
@@ -25,7 +25,7 @@
                             Asamblea Constituyente.
                         </strong></h4>
                     <p>Entre los cambios estaría la igualdad salarial entre mujeres y hombres.</p>
-                    <center><img src="../imagenes/img1.png" alt="" height="450px" width="800px"></center><br>
+                    <center><img src="../imagenes/img1.png" alt="" height="35%" width="80%"></center><br>
                     <p>Desde el estallido social iniciado el 10 de noviembre,
                         en las manifestaciones han ido creciendo las voces que
                         demandan una Asamblea Constituyente para cambiar la Constitución. (Foto: AFP)</p><br>
