--- a/index.html
+++ b/index.html
@@ -25,17 +25,24 @@
 
 <section class="contenido wrapper">
     <div class="contenedor">
-        <div class="contenido1">
-            <img src="imagenes/contenido4.png" alt="" width="350px" height="200px" style="margin-top: 10px; margin-left: 13%;"><br>
-            <h2 style="margin-top: 10px; margin-left: 30px ;margin-right: 13px; color: black;" ><u><a href="Vista/Noticia.html">Francisco Sagasti anuncia proyecto de ley para cambiar la
-                            Constitución del 93 y hace un llamado para una nueva
-                            Asamblea Constituyente.</a></u></h2>
-        </div>
         <div class="contenido2">
+            <img src="imagenes/contenido3.png" alt="" width="350px" height="200px" style="margin-top: 10px; margin-left: 13%;"><br>
+            <h2 style="margin-top: 10px; margin-left: 30px ;margin-right: 13px; color: black;" ><u><a href="https://elpais.com/internacional/2020-12-06/tras-varios-dias-de-protestas-el-congreso-peruano-anula-la-ley-de-la-agroexportacion.html">
+            Tras varios días de protestas, el Congreso peruano anula la ley de Agroexportación  
+        </a></u></h2>
+    </div>
+        <div class="contenido2">
+        
         <img src="imagenes/contenido3.png" alt="" width="350px" height="200px" style="margin-top: 10px; margin-left: 13%;"><br>
             <h2 style="margin-top: 10px; margin-left: 30px ;margin-right: 13px; color: black;" ><u><a href="https://elpais.com/internacional/2020-12-06/tras-varios-dias-de-protestas-el-congreso-peruano-anula-la-ley-de-la-agroexportacion.html">
             Tras varios días de protestas, el Congreso peruano anula la ley de Agroexportación  
         </a></u></h2>
+    </div>
+    <div class="contenido1">
+        <img src="imagenes/contenido4.png" alt="" width="350px" height="200px" style="margin-top: 10px; margin-left: 13%;"><br>
+        <h2 style="margin-top: 10px; margin-left: 30px ;margin-right: 13px; color: black;" ><u><a href="Vista/Noticia.html">Francisco Sagasti anuncia proyecto de ley para cambiar la
+                        Constitución del 93 y hace un llamado para una nueva
+                        Asamblea Constituyente.</a></u></h2>
     </div>
     <div class="contenedor2">
         <div class="contenido3">
